# thesis

./: CMakeLists.txt  README.md  notice.txt  package.xml  requirement.txt  setup.py
config/: collector.yaml  detector.yaml  diagnoser.yaml  localizer.yaml  process.yaml  receiver.yaml  service.yaml  simulator.yaml
data/02-02-22/: AP.csv  coordinates.csv  rssi.csv  time.csv
data/02-12-21/: AP.csv  coordinates.csv  rssi.csv
data/03-01-22/: AP.csv  coordinates.csv  rssi.csv  time.csv
data/09-12-21/: AP.csv  coordinates.csv  rssi.csv  time.csv
data/20-02-22/: bssid.csv  coordinates.csv  rss.csv  ssid.csv
data/21-02-22/: bssid.csv  coordinates.csv  rss.csv  ssid.csv
data/28-02-22/: bssid.csv  coordinates.csv  rss.csv  ssid.csv
data/31-01-22/: AP.csv  coordinates.csv  rssi.csv  time.csv
data/development/: meanTraining.csv  original.csv  test.csv  training.csv
data/evaluate/: parameters.txt  test_coordinates.csv
data/evaluate/25/: pathLoss.csv  training_coordinates.csv  training_data.csv
data/evaluate/50/: pathLoss.csv  selections.csv  training_coordinates.csv  training_data.csv
data/evaluate/four/: pathLoss.csv  selections.csv  test_data.csv  training_data.csv
data/evaluate/fourteen/: pathLoss.csv  test_data.csv  training_coordinates.csv  training_data.csv
data/evaluate/seven/: pathLoss.csv  selections.csv  test_data.csv  training_data.csv
data/evaluate/ten/: pathLoss.csv  test_data.csv  training_data.csv
data/test/raw/: bssid.csv  coordinates.csv  rss.csv  ssid.csv
data/test/result/: data.csv
data/training/raw/: bssid.csv  coordinates.csv  rss.csv  ssid.csv
data/training/result/: averaged_coordinates.csv  data.csv  (+3 more)
data/verification/: meanRound.csv
launch/: collect.launch  diagnose.launch  localize.launch  process.launch
model/: selections.csv
msg/: rssData.msg
result/: averaged_coordinates.csv  averaged_data.csv  pathLoss.csv  selections.csv
rviz/: visualize.rviz
src/general/: collector.py  detector  detector.py  diagnoser.py  localizer.py  process.py  receiver.py  scan.py  service.py  simulator.py  utils.py
src/monitor/: monitor.py
src/particle/: filter.py  motion.py  sensor.py
src/wifi_localization/: collector.py  observation.py  scan.py  utils.py
src/wifi_rssi_collection/: collector.py  iwlist.py  scan.py  scapyRssi.py  utils.py  visualizer.py
srv/: transformRequestService.srv  transformUpdateService.srv
test/: analysis.py  filter.py  motion.py  sensor.py
