<?xml version="1.0"?>
<package format="2">
  <name>wifi_localization</name>
  <version>0.0.1</version>
  <description>The project is designed to collect wifi rssi values to generate fingerprint map from mobile robot platform</description>
  <maintainer email="leizhenzhong15@gmail.com">zhenzhong</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>
  </export>
</package>